# plugins

./: .gitignore  .gitmodules  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  clippy.toml  cspell.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  test-cases.md
contrib/graphql-codegen-client-preset/: CHANGELOG.md  Cargo.toml  README.md  package.json
contrib/graphql-codegen-client-preset/src/: lib.rs  tests.rs
contrib/graphql-codegen-client-preset/tests/fixtures/: multiple-directives.ts  simple-uppercase-operation-name.js  simple-uppercase-operation-name.other-dir.js  use-cache-directive.ts
contrib/import-meta-env/: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  package.json
contrib/import-meta-env/src/: lib.rs
contrib/mut-cjs-exports/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  jest.config.cjs  package.json
contrib/mut-cjs-exports/__test__/case_1/: index.js  index.spec.js
contrib/mut-cjs-exports/__test__/case_10/: index.spec.ts  index.ts  parent.ts
contrib/mut-cjs-exports/__test__/case_10/children/: child.ts  index.ts  nino.ts
contrib/mut-cjs-exports/__test__/case_8/: index.spec.ts  index.ts  parent.ts
contrib/mut-cjs-exports/__test__/case_9/: child.ts  index.ts  nino.ts
contrib/mut-cjs-exports/__test__/case_swc_9651/: index.spec.ts  index.ts
contrib/mut-cjs-exports/src/: lib.rs  local_export_strip.rs  utils.rs
contrib/mut-cjs-exports/tests/: test.rs
contrib/mut-cjs-exports/tests/fixture/case_1/: input.js  output.js
contrib/mut-cjs-exports/tests/fixture/case_11/: input.js  output.js
contrib/mut-cjs-exports/tests/fixture/case_2/: input.js  output.js
contrib/mut-cjs-exports/tests/fixture/case_3/: input.js  output.js
contrib/mut-cjs-exports/tests/fixture/case_4/: input.js  output.js
contrib/mut-cjs-exports/tests/fixture/case_5/: input.js  output.js
contrib/mut-cjs-exports/tests/fixture/case_6/: output.js
contrib/mut-cjs-exports/tests/fixture/case_7/: output.js
contrib/mut-cjs-exports/tests/fixture/issue_133/: input.jsx  output.jsx
contrib/mut-cjs-exports/tests/fixture/issue_87/: input.js  output.js
crates/swc_experimental_babel/: Cargo.toml
crates/swc_experimental_babel/src/: cache.rs  lib.rs  qjs.rs  qjs_console.rs
crates/swc_experimental_babel/tests/: basic-transform.js  fixture.rs  prefresh-transform.js
crates/swc_experimental_babel/tests/basic/basic/: output.js
crates/swc_experimental_babel/tests/prefresh/import_custom_preact/: output.js
crates/swc_experimental_babel/tests/prefresh/import_default/: output.js
crates/swc_experimental_babel/tests/prefresh/import_lib_computed/: output.js
crates/swc_experimental_babel/tests/prefresh/import_named/: output.js
crates/swc_experimental_babel/tests/prefresh/import_namespace/: output.js
crates/swc_experimental_babel/tests/prefresh/local/: output.js
crates/swc_experimental_babel/tests/prefresh/multiple/: output.js
crates/swc_experimental_babel/tests/prefresh/param/: output.js
crates/swc_experimental_babel/tests/prefresh/value/: output.js
crates/swc_feature_flags/: Cargo.toml  README.md
crates/swc_feature_flags/src/: build_time.rs  config.rs  lib.rs  runtime.rs  stats.rs
crates/swc_feature_flags/tests/: fixture.rs
crates/swc_icu_messageformat_parser/: Cargo.toml
crates/swc_icu_messageformat_parser/src/: ast.rs  parser.rs  pattern_syntax.rs
crates/swc_icu_messageformat_parser/src/intl/: date_time_format_options.rs  mod.rs  number_format_options.rs
crates/swc_icu_messageformat_parser/tests/: run_parser_e2e.rs
crates/swc_icu_messageformat_parser/tests/fixtures/: unicode_1
crates/tailwind/: Cargo.toml
crates/tailwind/minimal-tailwind-postcss-plugin-main/: README.md  index.js  index.test.js  package-lock.json  package.json  tailwind.js
crates/tailwind/minimal-tailwind-postcss-plugin-main/test-fixtures/css-plugin/: index.css
crates/tailwind/minimal-tailwind-postcss-plugin-main/test-fixtures/external-plugin/: tailwind.config.js
crates/tailwind/minimal-tailwind-postcss-plugin-main/watching-demo/: index.css  tailwind.config.js  webpack.config.js
crates/tailwind/src/: base.rs  collapse_adjacent_rules.rs  collapse_duplicate_declarations.rs  config.rs  context.rs  detect_nesting.rs  evaluate_tailwind_functions.rs  expandTailwindAtRules.js  expand_apply_at_rules.rs  expand_tailwind_at_rules.rs  generateRules.js  generate_rules.rs  lib.rs  normalizeTailwindDirectives.js  normalize_tailwind_directives.rs  partition_apply_at_rules.rs  resolve_defaults_at_rules.rs  substitute_screen_at_rules.rs
crates/tailwind/src/util/: mod.rs  split_at_top_level_only.rs
crates/tailwind/tests/: fixture.rs  index.test.js  simple.rs
crates/tailwind/tests/fixture/@apply/: config.json  input.css  output.css
crates/tailwind/tests/fixture/@apply classes from outside a @layer/: config.json  input.css  output.css
crates/tailwind/tests/fixture/@apply error when using .group utility/: input.css
crates/tailwind/tests/fixture/@apply error when using .peer utility/: config.json  input.css
crates/tailwind/tests/fixture/@apply error when using a prefixed .group utility/: config.json  input.css
crates/tailwind/tests/fixture/@apply error when using a prefixed .peer utility/: input.css
crates/tailwind/tests/fixture/@apply error with nested @anyatrulehere/: input.css
crates/tailwind/tests/fixture/@apply error with nested @screen/: input.css
crates/tailwind/tests/fixture/@apply error with unknown utility/: config.json  input.css
crates/tailwind/tests/fixture/@applying classes from outside a @layer respects the source order/: config.json  input.css  output.css
crates/tailwind/tests/fixture/A bare ring-opacity utility is not supported when not using respectDefaultRingColorOpacity/: config.json
crates/tailwind/tests/fixture/A bare ring-opacity utility is supported when using respectDefaultRingColorOpacity/: config.json  output.css
crates/tailwind/tests/fixture/No defaults without @tailwind base/: config.json  output.css
xtask/: Cargo.toml
xtask/src/: main.rs  update.rs
(+1152 files in other folders)
