[workspace]
members = ["xtask", "crates/*", "packages/*", "contrib/*"]


resolver = "2"


[workspace.package]
authors      = ["강동윤/Donny <kdy.1997.dev@gmail.com>"]
edition      = "2021"
homepage     = "https://github.com/swc-project/plugins"
license      = "Apache-2.0"
repository   = "https://github.com/swc-project/plugins.git"
rust-version = "1.70"

[workspace.dependencies]
Inflector                   = "0.11.4"
anyhow                      = "1.0.83"
base64                      = "0.22"
base64ct                    = "1.5.2"
byteorder                   = "1"
bytes-str                   = "0.2.5"
cargo_metadata              = "0.18.1"
cipher                      = "0.4.4"
clap                        = "4.5.4"
convert_case                = "0.6.0"
default-from-serde          = "0.1"
digest                      = "0.10"
handlebars                  = "5.1.2"
hex                         = "0.4.3"
langtag                     = "0.3.2"
lightningcss                = "1.0.0-alpha.67"
magic-crypt                 = "3.1.13"
md-5                        = "0.10"
once_cell                   = "1.19.0"
parcel_selectors            = "0.28.0"
phf                         = "0.11.2"
preset_env_base             = "5.0.0"
pretty_assertions           = "1.3.0"
radix_fmt                   = "1"
regex                       = { version = "1.10.4", default-features = false }
rquickjs                    = "0.8.1"
rustc-hash                  = "2.1.0"
serde                       = "1.0.203"
serde_json                  = "1.0.117"
serde_repr                  = "0.1"
sha1                        = "0.10"
sha2                        = "0.10"
similar-asserts             = "1.4.2"
swc_atoms                   = "7.0.0"
swc_cached                  = "2.0.0"
swc_common                  = "14.0.4"
swc_core                    = "44.0.0"
swc_css_ast                 = "14.0.0"
swc_css_codegen             = "14.0.0"
swc_css_compat              = "14.0.0"
swc_css_minifier            = "14.0.0"
swc_css_parser              = "14.0.0"
swc_css_prefixer            = "17.0.0"
swc_css_visit               = "14.0.0"
swc_ecma_ast                = "15.0.0"
swc_ecma_codegen            = "17.0.2"
swc_ecma_minifier           = "33.0.0"
swc_ecma_parser             = "24.0.2"
swc_ecma_transforms         = "35.0.0"
swc_ecma_transforms_base    = "27.0.0"
swc_ecma_transforms_react   = "30.0.1"
swc_ecma_transforms_testing = "30.0.0"
swc_ecma_utils              = "21.0.0"
swc_ecma_visit              = "15.0.0"
swc_plugin_macro            = "1.1.0"
swc_plugin_proxy            = "15.0.0"
swc_sourcemap               = "9.3.0"
swc_trace_macro             = "2.0.2"
testing                     = "15.0.0"
tracing                     = "0.1.40"
widestring                  = "1.0.2"

swc_icu_messageformat_parser = { version = "1.0.0", path = "./crates/swc_icu_messageformat_parser" }


[profile.release]
codegen-units = 1
# debug = true
lto = true

# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"

[patch.crates-io]
ast_node                         = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
better_scoped_tls                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
binding_macros                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
dbg-swc                          = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
from_variant                     = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
generate-code                    = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
hstr                             = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
jsdoc                            = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
preset_env_base                  = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
string_enum                      = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc                              = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_allocator                    = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_atoms                        = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_bundler                      = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_cli_impl                     = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_common                       = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_compiler_base                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_config                       = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_config_macro                 = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_core                         = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css                          = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_ast                      = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_codegen                  = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_codegen_macros           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_compat                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_lints                    = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_minifier                 = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_modules                  = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_parser                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_prefixer                 = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_utils                    = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_css_visit                    = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_ast                     = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_codegen                 = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_codegen_macros          = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_bugfixes         = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_common           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_es2015           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_es2016           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_es2017           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_es2018           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_es2019           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_es2020           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_es2021           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_es2022           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compat_es3              = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_compiler                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_ext_transforms          = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_lexer                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_lints                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_loader                  = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_minifier                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_parser                  = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_preset_env              = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_quote                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_quote_macros            = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_react_compiler          = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_regexp                  = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_regexp_ast              = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_regexp_common           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_regexp_visit            = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_testing                 = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms              = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms_base         = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms_classes      = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms_compat       = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms_macros       = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms_module       = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms_optimization = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms_proposal     = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms_react        = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms_testing      = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_transforms_typescript   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_usage_analyzer          = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_utils                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecma_visit                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ecmascript                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_eq_ignore_macros             = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_error_reporters              = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_estree_ast                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_estree_compat                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_graph_analyzer               = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_html                         = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_html_ast                     = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_html_codegen                 = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_html_codegen_macros          = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_html_minifier                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_html_parser                  = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_html_utils                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_html_visit                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_macros_common                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_malloc                       = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_node_bundler                 = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_node_comments                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_nodejs_common                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_plugin                       = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_plugin_backend_tests         = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_plugin_backend_wasmer        = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_plugin_backend_wasmtime      = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_plugin_macro                 = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_plugin_proxy                 = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_plugin_runner                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_timer                        = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_trace_macro                  = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_transform_common             = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_ts_fast_strip                = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_typescript                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_visit                        = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_xml                          = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_xml_ast                      = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_xml_codegen                  = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_xml_codegen_macros           = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_xml_parser                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
swc_xml_visit                    = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
testing                          = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
testing_macros                   = { git = "https://github.com/quininer/swc.git", branch = "r/ast-non-exhaustive" }
