[workspace]
members = ["xtask", "crates/*", "packages/*", "contrib/*"]


resolver = "2"


[workspace.package]
authors      = ["강동윤/Donny <kdy.1997.dev@gmail.com>"]
edition      = "2021"
homepage     = "https://github.com/swc-project/plugins"
license      = "Apache-2.0"
repository   = "https://github.com/swc-project/plugins.git"
rust-version = "1.70"

[workspace.dependencies]
Inflector                   = "0.11.4"
anyhow                      = "1.0.83"
base64                      = "0.22"
base64ct                    = "1.5.2"
byteorder                   = "1"
bytes-str                   = "0.2.5"
cargo_metadata              = "0.18.1"
cipher                      = "0.4.4"
clap                        = "4.5.4"
convert_case                = "0.6.0"
default-from-serde          = "0.1"
digest                      = "0.10"
handlebars                  = "5.1.2"
hex                         = "0.4.3"
langtag                     = "0.3.2"
lightningcss                = "1.0.0-alpha.67"
magic-crypt                 = "3.1.13"
md-5                        = "0.10"
once_cell                   = "1.19.0"
parcel_selectors            = "0.28.0"
phf                         = "0.11.2"
preset_env_base             = "5.0.0"
pretty_assertions           = "1.3.0"
radix_fmt                   = "1"
regex                       = { version = "1.10.4", default-features = false }
rquickjs                    = "0.8.1"
rustc-hash                  = "2.1.0"
serde                       = "1.0.203"
serde_json                  = "1.0.117"
serde_repr                  = "0.1"
sha1                        = "0.10"
sha2                        = "0.10"
similar-asserts             = "1.4.2"
swc_atoms                   = "7.0.0"
swc_cached                  = "2.0.0"
swc_common                  = "15.0.0"
swc_core                    = "44.0.2"
swc_css_ast                 = "15.0.0"
swc_css_codegen             = "15.0.0"
swc_css_compat              = "15.0.0"
swc_css_minifier            = "15.0.0"
swc_css_parser              = "15.0.0"
swc_css_prefixer            = "18.0.0"
swc_css_visit               = "15.0.0"
swc_ecma_ast                = "16.0.0"
swc_ecma_codegen            = "17.0.2"
swc_ecma_minifier           = "33.0.0"
swc_ecma_parser             = "25.0.0"
swc_ecma_transforms         = "35.0.0"
swc_ecma_transforms_base    = "27.0.0"
swc_ecma_transforms_react   = "30.0.2"
swc_ecma_transforms_testing = "30.0.0"
swc_ecma_utils              = "21.0.0"
swc_ecma_visit              = "16.0.0"
swc_plugin_macro            = "1.1.0"
swc_plugin_proxy            = "16.0.0"
swc_sourcemap               = "9.3.0"
swc_trace_macro             = "2.0.2"
testing                     = "16.0.0"
tracing                     = "0.1.40"
widestring                  = "1.0.2"

swc_icu_messageformat_parser = { version = "1.0.0", path = "./crates/swc_icu_messageformat_parser" }


[profile.release]
codegen-units = 1
# debug = true
lto = true

# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"
