[package]
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "xtask"
publish = false
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cargo_metadata = "0.18.0"
clap = { version = "4.4.6", features = ["derive"] }
