[package]
authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
name         = "xtask"
publish      = false
repository   = { workspace = true }
rust-version = { workspace = true }
version      = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow         = { workspace = true }
cargo_metadata = { workspace = true }
clap           = { workspace = true, features = ["derive"] }
