[package]
description = "SWC plugin for https://the-guild.dev/graphql/codegen/plugins/presets/preset-client"
edition     = "2021"
license     = "MIT"
name        = "swc_plugin_graphql_codegen_client_preset"
publish     = false
version     = "0.2.0"


[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto           = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"

[dependencies]
graphql-parser = "0.4.0"
pathdiff = "0.2.1"
serde = "1"
serde_json = "1.0.105"
swc_core = { workspace = true, features = [
  "ecma_plugin_transform",
  "ecma_visit",
  "ecma_utils",
  "ecma_parser",
  "common",
  "testing",
] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
