[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "AST Transforms for tailwind"
edition = "2021"
license = "Apache-2.0"
name = "swc_tailwind"
repository = "https://github.com/swc-project/plugins.git"
version = "0.1.3"

[features]
parallel = ["rayon"]

[dependencies]
anyhow = "1"
glob = "0.3.0"
rayon = {version = "1", optional = true}
regex = "1"
serde = "1"
serde_json = "1.0.79"
swc_common = {version = "0.29.13", features = ["concurrent"]}
swc_core = {version = "0.40.56", features = [
  "common",
  "css_ast",
  "css_codegen",
  "css_parser",
  "css_visit",
]}
