[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "AST Transforms for tailwind"
edition = "2021"
license = "Apache-2.0"
name = "swc_tailwind"
repository = "https://github.com/swc-project/plugins.git"
version = "0.1.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
